# ethz_grid_map_proc

ethz_grid_map_proc/: CMakeLists.txt  package.xml
ethz_grid_map_proc/cfg/: GridMapProc.cfg
ethz_grid_map_proc/include/ethz_grid_map_proc/: grid_map_to_occupancy_grid.h
ethz_grid_map_proc/src/: grid_map_to_occupancy_grid.cpp  grid_map_to_occupancy_grid_node.cpp
